--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 db.sqlite3
 /RecruitHelper/__pycache__/
 /RecruitHelper/wsgi.py
-*.pyc
+~/*.pyc
 goorm.manifest
 *.pyc
-__pycache__
+**/__pycache__
 myvenv
 db.sqlite3
 /static
